--- a/package.json
+++ b/package.json
@@ -1,15 +1,58 @@
 {
-  "name": "project-scaffold-cli",
+  "name": "@pankajkumardev/project-scaffold-cli",
   "version": "1.0.0",
-  "description": "A beautiful CLI tool to generate project structures based on tech stack.",
+  "description": "A beautiful, interactive CLI tool to scaffold modern web and backend projects with React, Next.js, Vue, Node.js, Python Flask/Django and more. Zero configuration, production-ready projects in seconds!",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "scaffold": "index.js"
+    "scaffold": "index.js",
+    "project-scaffold": "index.js"
   },
   "scripts": {
     "start": "node index.js"
   },
+  "keywords": [
+    "cli",
+    "scaffold",
+    "generator",
+    "react",
+    "nextjs",
+    "vue",
+    "nodejs",
+    "express",
+    "python",
+    "flask",
+    "django",
+    "tailwind",
+    "vite",
+    "project-generator",
+    "boilerplate",
+    "template",
+    "starter",
+    "create-app"
+  ],
+  "author": {
+    "name": "Pankaj Kumar",
+    "url": "https://www.pankajk.tech"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PankajKumardev/scaffold-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/PankajKumardev/scaffold-cli/issues"
+  },
+  "homepage": "https://github.com/PankajKumardev/scaffold-cli#readme",
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "files": [
+    "index.js",
+    "src/",
+    "README.md",
+    "LICENSE"
+  ],
   "dependencies": {
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.0",
