--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "@pankajkumardev/project-scaffold-cli",
-  "version": "1.0.0",
+  "name": "initgen",
+  "version": "1.0.1",
   "description": "A beautiful, interactive CLI tool to scaffold modern web and backend projects with React, Next.js, Vue, Node.js, Python Flask/Django and more. Zero configuration, production-ready projects in seconds!",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "scaffold": "index.js",
-    "project-scaffold": "index.js"
+    "initgen": "index.js"
   },
   "scripts": {
     "start": "node index.js"
