--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "LICENSE"
   ],
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.0",
     "figlet": "^1.7.0",
