--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "LICENSE"
   ],
   "dependencies": {
-    "@vercel/analytics": "^1.5.0",
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.0",
     "figlet": "^1.7.0",
     "gradient-string": "^2.0.1",
     "inquirer": "^9.2.7",
-    "nanospinner": "^1.1.0"
+    "nanospinner": "^1.1.0",
+    "@vercel/analytics": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.14",
