--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "recharts": "^2.15.4",
     "tailwind-merge": "2.5.2"
   },
   "devDependencies": {
